--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
+    "feather-icons": "^4.28.0",
     "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-alpha.7",
+    "internal-ip": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.4",
     "portfinder-sync": "0.0.2",
+    "style-loader": "^2.0.0",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2",
