--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "internal-ip": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.4",
     "portfinder-sync": "0.0.2",
+    "sorttable": "^1.0.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
